add bin files, add reorg logic

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
-MONGO_URI=mongodb://localhost/transactions
-WEB3_URI=wss://mainnet.infura.io/ws/v3/
-MAX_BATCH_SIZE=5
-START_FROM=1
-NO_PREVIOUS=false
+MONGO_URI=mongodb://localhost/tx2
+WEB3_URI=wss://mainnet.infura.io/ws/v3/2d0c4242f8ba4635891fe7ce9e2d1894
+MAX_BLOCK_BATCH_SIZE=10
+MAX_TRANSACTION_BATCH_SIZE=15
 PORT=8080
-SENTRY_DSN=
+SENTRY_DSN=https://1034ae150cf34c06a0ccb804caa39098@sentry.io/1876499
+START_BLOCK=9285500
+END_BLOCK=
+REORG_GAP=10
