--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
   "author": "Harsh Vakharia",
   "license": "MIT",
   "dependencies": {
-    "@sentry/node": "^5.11.0",
+    "@sentry/node": "^5.27.4",
     "bluebird": "^3.7.2",
     "compression": "^1.7.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "helmet": "^3.21.2",
-    "mongoose": "^5.8.6",
-    "web3": "^1.2.4"
+    "mongoose": "^5.10.14",
+    "web3": "^1.3.0",
+    "web3-eth-abi": "^1.3.0"
   },
   "devDependencies": {
     "standard": "^14.3.1"
